--- a/src/app/tally/components/detail/detail.component.html
+++ b/src/app/tally/components/detail/detail.component.html
@@ -57,10 +57,10 @@
 
     <div class="clr-row tally-meta">
         <div class="clr-col-6">
-            <button class="btn btn-danger-outline block decrese"  [disabled]="!tally.getActive()" (click)="decrease()">Minska</button>
+            <button class="btn btn-danger-outline block decrese"  [disabled]="!tally.getActive()" (click)="decrease(tally)">Minska</button>
         </div>
         <div class="clr-col-6">
-            <button class="btn btn-success-outline block increse"  [disabled]="!tally.getActive()" (click)="increase()">Öka</button>
+            <button class="btn btn-success-outline block increse"  [disabled]="!tally.getActive()" (click)="increase(tally)">Öka</button>
         </div>
     </div>
 </div>
