--- a/src/app/tally/components/detail/detail.component.scss
+++ b/src/app/tally/components/detail/detail.component.scss
@@ -6,11 +6,13 @@
     }
     .clr-row.tally-meta {
         margin-bottom: 20px;
-        .clr-col-6 {
+        >div {
             background: #fff;
             padding: 20px;
             border: 1px solid #e6e6e6;
             border-right: none;
+
+            
 
             &:last-child {
                 border-radius: 3px;
