--- a/src/app/tally/components/list/list.component.html
+++ b/src/app/tally/components/list/list.component.html
@@ -96,7 +96,7 @@
 
 <div class="clr-row add-row">
     <div class="clr-col-12">
-        <a routerLink="/add2" class="btn btn-success block">Skapa ny</a>
+        <a routerLink="/add" class="btn btn-success block">Skapa ny</a>
     </div>
 </div>
 
@@ -106,7 +106,7 @@
             <div class="clr-control-container">
                 <div class="clr-toggle-wrapper">
                     <input type="checkbox" id="toggle1" name="toggle-basic" [(ngModel)]="showAll"
-                        (change)="eventCheck($event)" class="clr-toggle" />
+                        (change)="toggleShowInactive($event)" class="clr-toggle" />
                     <label for="toggle1">Visa inaktiva</label>
                 </div>
             </div>
