--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <!-- Header -->
   <header class="header-6">
     <div class="branding">
-      <a href="/" class="nav-link">
+      <a (click)="reloadPage()" class="nav-link">
         <span class="title">Clear Results <small class="appversion">
           v{{ appVersion.version }} | {{ appVersion.date | date: 'd, MMMM hh:mm' }}</small></span>
       </a> 
