Rename of reset boolean

--- a/src/app/tally/components/detail/detail.component.html
+++ b/src/app/tally/components/detail/detail.component.html
@@ -52,7 +52,7 @@
 
     <div class="clr-row tally-meta">
         <div class="clr-col-6">
-            <h4>Nollställs: {{ tally.getResetEveryday() === true ? 'Ja' : 'Nej' }}</h4>
+            <h4>Nollställs: {{ tally.getResetOnInterval() === true ? 'Ja' : 'Nej' }}</h4>
         </div>
         <div class="clr-col-6">
             <h4>Topscore: {{ tally.getTopScore() }}</h4>
