--- a/src/app/tally/components/upsert/upsert-tally.component.html
+++ b/src/app/tally/components/upsert/upsert-tally.component.html
@@ -71,18 +71,18 @@
 
 
                 <div class="clr-row">
-                    <div class="clr-col-6 resetEveryDay">
+                    <div class="clr-col-6 resetOnInterval">
                         <span>Nollställ varje dag</span>
                         <div class="radio btn">
-                            <input type="radio" formControlName="resetEveryDay" value="true" id="btn-demo-radio-1"
+                            <input type="radio" formControlName="resetOnInterval" value="true" id="btn-demo-radio-1"
                                 [value]="true">
                             <label for="btn-demo-radio-1">Ja</label>
                         </div>
                     </div>
-                    <div class="clr-col-6 resetEveryDay">
+                    <div class="clr-col-6 resetOnInterval">
                         <span>&nbsp;</span>
                         <div class="radio btn">
-                            <input type="radio" formControlName="resetEveryDay" value="false" id="btn-demo-radio-4"
+                            <input type="radio" formControlName="resetOnInterval" value="false" id="btn-demo-radio-4"
                                 [value]="false">
                             <label for="btn-demo-radio-4">Nej</label>
                         </div>
