--- a/src/app/tally/components/upsert/upsert-tally.component.scss
+++ b/src/app/tally/components/upsert/upsert-tally.component.scss
@@ -11,7 +11,7 @@
             width: 100%;
         }
 
-        .resetEveryDay {
+        .resetOnInterval {
             margin: 1rem 0;
             span {
                 font-size: 0.65rem;
