--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="branding">
       <a (click)="toStartPage()" class="nav-link">
         <span class="title">Clear Results <small class="appversion">
-          v{{ appVersion.version }} | {{ appVersion.date | date: 'd, MMMM hh:mm' }}</small></span>
+          v{{ appVersion.version }} | {{ appVersion.date | date: 'd, MMMM HH:mm' }}</small></span>
       </a> 
     </div>
 
