--- a/src/app/tally/components/upsert/upsert-tally.component.html
+++ b/src/app/tally/components/upsert/upsert-tally.component.html
@@ -144,4 +144,4 @@
 
 <app-modal [modalData]="cleanHistoryModalData" (parentEvent)="cleanHistoryConfirmed()"></app-modal>
 
-<pre>{{tallyForm.value | json }}</pre>
+<!--pre>{{tallyForm.value | json }}</pre-->
