--- a/src/app/shared/components/history-summary/history-summary.component.html
+++ b/src/app/shared/components/history-summary/history-summary.component.html
@@ -1,18 +1,25 @@
 <div>
     <h4>Historik</h4>
-    <small>Målet är uppsatt {{ resetIntervalText }}</small>
+    <small *ngIf="tally.getCanReset()">Målet är uppsatt 
+        <span>{{ resetIntervalText }}</span>
+
+    </small>
     <small *ngIf="tally.getHistory().length < 1">Det finns ingen historik för denna räknare, <a routerLink="/history/edit/{{ tally.getUuid() }}">lägg till historik.</a></small>
     <table class="table" *ngIf="tally.getHistory().length > 0">
         <thead>
             <tr>
-                <th>Datum</th>
+                <th *ngIf="tally.getResetInterval() == 'daily'">Datum</th>
+                <th *ngIf="tally.getResetInterval() == 'weekly'">Vecka</th>
+                <th *ngIf="tally.getResetInterval() == 'monthly'">Månad</th>
                 <th>Värde</th>
                 <th>Mål uppnått</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let history of tally.getHistory()">
-                <td>{{ history.date | date: 'yyyy-MM-dd'}}</td>
+            <tr *ngFor="let history of tally.getHistory()" [ngClass]="{ 'goal-reached':history.value >= tally.getGoal(), 'goal-not-reached':history.value < tally.getGoal() }">
+                <td *ngIf="tally.getResetInterval() == 'daily'">{{ history.date | date: 'yyyy-MM-dd'}}</td>
+                <td *ngIf="tally.getResetInterval() == 'weekly'">Vecka {{ history.date | date: 'w'}}</td>
+                <td *ngIf="tally.getResetInterval() == 'monthly'">{{ history.date | date: 'LLLL' | titlecase }}</td>
                 <td>{{ history.value }} / {{ tally.getGoal() }}</td>
                 <td>
                     <clr-icon class="warning" shape="times" *ngIf="history.value < tally.getGoal()">
